2006-01-27  Paolo Borelli  <pborelli@katamail.com>

	* remove outdated files, patch by Stephane Loeuillet.

2006-01-21  Paolo Borelli  <pborelli@katamail.com>

	* data/gedit-desktop.in.in: add GNOME/GTK categories to the
	.desktop file. (bug 328013)

2006-01-21  Steve Frécinaux  <steve@istique.net>

	* plugins/externaltools/tools/functions.py: implement applicability
	(gray unusable tools, allow to run a command on unsaved document)
	* plugins/externaltools/tools/__init__.py: adapt for applicability;
	remove debug message
	* plugins/externaltools/tools/manager.py: correct a bug related to
	keyboard navigation; allow reordering the tools in the tree and in the
	main window menu; update the right pane title when a tool is renamed
	* plugins/externaltools/tools/tools.glade: name the hpaned
	* plugins/externaltools/tools/outputpanel.py: show the panel when a
	tool is ran

2006-01-21  Steve Frécinaux  <steve@istique.net>

	* plugins/snippets/snippets/SnippetsDialog.py: remove the gconf stuff

=== gedit 2.13.4 ===

2006-01-20  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.13.4 released

2006-01-20  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac: depend on the brand new gnome-python-desktop
	instead of gnome-python-extras.

2006-01-20  Paolo Borelli  <pborelli@katamail.com>

	* gedit/bacon-message-connection.[ch]: update from libbacon, fixes
	crash on startup reported in bug 326247. Patch by Marco Barisione.

2006-01-20  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document-saver.c: actually use the PRESERVE_BACKUP
	flag introduced with the autosave patch.

2006-01-20  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-window.c: fix warning introduced by my last patch.
	Do some cleanup while we are at it.

2006-01-19  Paolo Maggi  <paolo@gnome.org>

	* gedit/gedit-io-error-message-area.c
	(gedit_unrecoverable_loading_error_message_area_new)
	(gedit_unrecoverable_reverting_error_message_area_new)