@@ -1,3 +1,7 @@
+2006-01-29  Steve Frécinaux  <steve@istique.net>
+
+	* gedit/gedit-view.c: hide cursor when interactive search is active
+
 2006-01-27  Paolo Borelli  <pborelli@katamail.com>
 
 	* remove outdated files, patch by Stephane Loeuillet.
